feat: add PayPal configuration constants for client ID, secret, and environment

--- a/backend/package.json
+++ b/backend/package.json
@@ -23,9 +23,9 @@
   "dependencies": {
     "@medusajs/admin-sdk": "2.8.8",
     "@medusajs/cli": "2.8.8",
+    "@medusajs/dashboard": "2.8.8",
     "@medusajs/framework": "2.8.8",
     "@medusajs/medusa": "2.8.8",
-    "@medusajs/dashboard": "2.8.8",
     "@medusajs/notification-sendgrid": "2.8.8",
     "@medusajs/payment-stripe": "2.8.8",
     "@medusajs/workflow-engine-redis": "2.8.8",
@@ -35,6 +35,7 @@
     "@mikro-orm/postgresql": "6.4.3",
     "@react-email/components": "^0.0.26",
     "@rokmohar/medusa-plugin-meilisearch": "1.2.3",
+    "@rsc-labs/medusa-paypal-payment": "^0.0.2",
     "awilix": "^8.0.1",
     "medusajs-launch-utils": "^0.0.17",
     "minio": "^8.0.3",
