feat: add Cloudflare R2 configuration and improve search functionality
- Added Cloudflare R2 configuration constants in `constants.ts` for file storage.
- Updated `next.config.js` to include Cloudflare R2 as an image source.
- Enhanced search results page to handle cases when search is disabled, providing user feedback.
- Refactored search client initialization to only occur if the search endpoint is configured, and added a flag to check if search is enabled.

--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "@rokmohar/medusa-plugin-meilisearch": "1.2.3",
     "@rsc-labs/medusa-paypal-payment": "^0.0.2",
     "awilix": "^8.0.1",
+    "medusa-file-r2": "^0.0.2",
     "medusajs-launch-utils": "^0.0.17",
     "minio": "^8.0.3",
     "pg": "^8.13.1",
