--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "@medusajs/admin-sdk": "2.8.8",
     "@medusajs/cli": "2.8.8",
     "@medusajs/dashboard": "2.8.8",
+    "@medusajs/file-s3": "^2.11.3",
     "@medusajs/framework": "2.8.8",
     "@medusajs/medusa": "2.8.8",
     "@medusajs/notification-sendgrid": "2.8.8",
